# vxn-1

./: .gitignore  .gitmodules  Cargo.toml  README.md  deploy.sh  rust-toolchain.toml
crates/vxn-clap/: Cargo.toml
crates/vxn-clap/src/: gui.rs  lib.rs  local.rs
crates/vxn-core-app/: Cargo.toml
crates/vxn-core-app/src/: backend.rs  controller.rs  events.rs  lib.rs  model.rs  params.rs  preset.rs
crates/vxn-core-app/tests/: controller.rs
crates/vxn-core-clap/: Cargo.toml
crates/vxn-core-clap/src/: engine.rs  events.rs  gesture.rs  lib.rs  local.rs  state.rs  testing.rs  transport.rs
crates/vxn-core-clap/tests/: dispatch.rs
crates/vxn-core-ui-web/: Cargo.toml
crates/vxn-core-ui-web/assets/: cutoff-tuned.js  preset-browser.css  preset-browser.js  value-pop.css  value-pop.js  wire-drag.js
crates/vxn-core-ui-web/src/: lib.rs  text_input.rs
crates/vxn-core-ui-web/tests/: bridge.rs
crates/vxn-core-utils/: Cargo.toml
crates/vxn-core-utils/src/: ftz.rs  halfband.rs  lib.rs  limiter.rs  math.rs  midi.rs  smoothing.rs  sync.rs
crates/vxn-engine/: Cargo.toml
crates/vxn-engine/benches/: render.rs
crates/vxn-engine/examples/: busy_profile.rs
crates/vxn-engine/src/: factory.rs  lib.rs  modmatrix.rs  params.rs  preset.rs  preset_io.rs  shared.rs  smoothing.rs  state.rs  sync.rs  voice.rs
crates/vxn-preset/: Cargo.toml
crates/vxn-preset/src/: lib.rs
crates/vxn-ui/: Cargo.toml
crates/vxn-ui-vizia/: Cargo.toml
crates/vxn-ui-vizia/examples/: layout_probe.rs
crates/vxn-ui-vizia/src/: lib.rs
crates/vxn-ui/examples/: layout_probe.rs
crates/vxn-ui/src/: lib.rs
standalone/: CMakeLists.txt
vxn-1/crates/vxn-app/: Cargo.toml
vxn-1/crates/vxn-app-wasm-probe/: Cargo.toml  README.md  param_store_bench.mjs
vxn-1/crates/vxn-app-wasm-probe/src/: lib.rs
vxn-1/crates/vxn-app/src/: controller.rs  diff.rs  domain.rs  events.rs  factory_asset.rs  lib.rs  model.rs  params.rs  preset.rs  preset_names.rs  preset_record.rs  preset_toml.rs  state.rs  sync.rs
vxn-1/crates/vxn-app/tests/: controller.rs
vxn-1/crates/vxn-clap/: Cargo.toml
vxn-1/crates/vxn-clap/src/: gui.rs  lib.rs
vxn-1/crates/vxn-ui-web/: Cargo.toml
vxn-1/crates/vxn-ui-web/src/: lib.rs
vxn-1/crates/vxn-wasm/: .gitignore  Cargo.toml  README.md  SPIKE-0035-findings.md  WEB-HOSTING.md  deploy-web.sh  harness-0035.mjs  harness-0038.mjs  harness-0040.mjs  harness-0042.mjs  harness.mjs  serve-coep.mjs
vxn-1/crates/vxn-web-controller/: Cargo.toml
vxn-1/wrapper/: CMakeLists.txt
vxn-2/: Cargo.toml  DEVELOPERS.html  DEVELOPERS.md  PARAMETERS.md  README.md  deploy.sh
vxn-2/.cargo/: config.toml
vxn-2/adrs/: 0001-vxn2-overall-design.md  0002-drop-dual-layer.md  0003-dirty-bitset-diff-pump.md  0004-optional-per-voice-oversampled-filter.md  0005-stack-pitch-mod.md  0006-voice-lifecycle-click-free-reuse.md  0007-dx7-log-level-curve.md  0008-declick-headroom-voice-stealing.md  0009-matrix-scale-source.md
vxn-2/crates/vxn2-app/: Cargo.toml
vxn-2/crates/vxn2-clap/: Cargo.toml
vxn-2/crates/vxn2-dsp/: Cargo.toml
vxn-2/crates/vxn2-engine/: Cargo.toml
vxn-2/crates/vxn2-osc-bench/: Cargo.toml
vxn-2/crates/vxn2-ui-web/: Cargo.toml
vxn-2/crates/vxn2-wasm/: Cargo.toml  serve-coep.mjs
vxn-2/crates/vxn2-web-controller/: Cargo.toml
vxn-2/epics/closed/: E001-audio-kernel.md  E002-clap-shell.md  E003-faceplate.md  E004-single-layer-collapse.md  E005-dirty-bitset-pump.md  E007-optional-per-voice-filter.md  E008-mod-matrix-completeness.md
vxn-2/epics/open/: E002-clap-shell.md  E003-faceplate.md  E006-review-remediation.md  E007-optional-per-voice-filter.md  E009-windows-parity.md  E010-standalone-builds.md
vxn-2/tickets/: README.md
vxn-2/tickets/closed/: 0001-operator-core.md  0002-algorithm-router.md  0003-voice.md  0004-polyphony-allocator.md  0005-voice-stacking.md  0006-lfos.md  0007-extra-envelopes.md  0008-mod-matrix.md  0009-voicing-modes.md  0010-delay-fx.md  0011-fdn-reverb.md  0012-master-and-params.md  0013-clap-scaffold.md  0014-shared-params.md  0015-clap-params.md  0016-process-loop.md  0019-bundle-xtask.md  0021-pre-fx-cleanup.md  0022-vxn2-app-scaffold.md  0023-vxn2-ui-web-scaffold.md  0024-clap-gui-extension.md  0025-faceplate-html-css.md  0026-panels-js.md  0027-op-row.md  0028-mod-matrix-overlay.md  0029-preset-bar.md  0030-text-input-popup.md  0031-ui-echo.md  0032-bundle-and-smoke.md  0033-engine-collapse-patch.md  0034-matrix-flatten.md  0035-params-flatten-ids.md  0036-clap-shell-flat-ids.md  0037-app-events-drop-layer.md  0038-ui-drop-voicing.md  0039-docs-and-archive.md  0055-shared-params-dirty-bitset.md  0056-local-params-drop-host-changed.md  0057-tick-pump-drain-dirty-bits.md  0058-drop-bespoke-pushes-and-echoes.md  (+36 more)
vxn-2/tickets/open/: 0005-voice-stacking.md  0010-delay-fx.md  0012-master-and-params.md  0017-state-extension.md  0018-default-patch.md  0020-clack-host-smoke.md  0025-faceplate-html-css.md  0026-panels-js.md  0027-op-row.md  0028-mod-matrix-overlay.md  0029-preset-bar.md  0030-text-input-popup.md  0031-ui-echo.md  0032-bundle-and-smoke.md  0061-remove-lfo1-depth.md  0062-wire-amp-sens.md  0063-wire-pitch-smoother.md  0064-solo-note-off-dispatch.md  0065-clap-gesture-events.md  0066-sync-aware-value-to-text.md  0067-drop-dual-emission.md  0068-rt-hardening.md  0069-param-audibility-sweep.md  0070-vxn2-ci.md  0071-dsp-hygiene.md  0072-docs-dead-code-cleanup.md  0074-level-pan-mod-smoothing.md  0075-control-block-slicing.md  0076-level-clamp-corner-smoothing.md  0077-combined-level-ramp.md  0078-multiplicative-level-mod.md  0079-fb-scale-recalibration.md  0085-quiescence-skip.md  0086-latency-reporting.md  0087-filter-benches-and-tests.md  0089-ks-panel-legibility.md  0098-xtask-cross-platform-bundle.md  0099-vxn2-windows-compile.md  0100-build-windows-ci.md  0101-windows-editor-verify.md  (+8 more)
vxn-2/tools/: .gitignore  README.md  dx7_to_vxn2.py  dx7decode.py
vxn-2/ui-mockup/: index.html
vxn-2/xtask/: Cargo.toml
vxn-2/xtask/src/: main.rs
vxn-3/crates/vxn3-app/: Cargo.toml
vxn-3/crates/vxn3-clap/: Cargo.toml
vxn-3/crates/vxn3-ui-web/: Cargo.toml
(+1405 files in other folders)
