[workspace]
resolver = "2"
members = [
    "crates/vxn2-clap",
    "crates/vxn2-dsp",
    "crates/vxn2-engine",
    "crates/vxn2-osc-bench",
    "xtask",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Vulpus Labs"]
rust-version = "1.85"

# Pinned to the same rev as vxn-1 so both workspaces stay in lockstep.
[workspace.dependencies]
clack-plugin = { git = "https://github.com/prokopyl/clack", rev = "f874e858ad576c601367b3038af5088a4e671744" }
clack-extensions = { git = "https://github.com/prokopyl/clack", rev = "f874e858ad576c601367b3038af5088a4e671744" }
clack-host = { git = "https://github.com/prokopyl/clack", rev = "f874e858ad576c601367b3038af5088a4e671744" }

# Release profile tuned for real-time audio DSP.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "unwind"
