[package]
name = "vxn-clap"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "VXN1 CLAP plugin shell (clack)."

[lib]
# cdylib for the host-loadable plugin; rlib so integration tests can link it.
crate-type = ["cdylib", "rlib"]

[dependencies]
vxn-engine = { workspace = true }
vxn-ui = { workspace = true }
clack-plugin = { workspace = true }
clack-extensions = { workspace = true, features = [
    "audio-ports",
    "note-ports",
    "params",
    "state",
    "gui",
    "clack-plugin",
] }

# Read the host NSView's backing scale in the GUI extension (set_parent) to
# pin the editor's HiDPI factor; macOS only.
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[dev-dependencies]
clack-host = { git = "https://github.com/prokopyl/clack", rev = "f874e858ad576c601367b3038af5088a4e671744" }
