[package]
name = "vxn-clap"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "VXN1 CLAP plugin shell (clack)."

[lib]
# cdylib for the host-loadable plugin; rlib so integration tests can link it.
crate-type = ["cdylib", "rlib"]

[dependencies]
vxn-engine = { workspace = true }
vxn-ui = { workspace = true }
clack-plugin = { workspace = true }
clack-extensions = { workspace = true, features = [
    "audio-ports",
    "note-ports",
    "params",
    "state",
    "gui",
    "clack-plugin",
] }

[target.'cfg(target_os = "macos")'.dependencies]
# Query the host NSView's backing scale at attach time to pin the editor's
# HiDPI factor (see gui.rs `parent_backing_scale`). Matches baseview's objc.
objc = "0.2"

[dev-dependencies]
clack-host = { git = "https://github.com/prokopyl/clack", rev = "f874e858ad576c601367b3038af5088a4e671744" }

[lints.rust]
# The `objc` 0.2 `msg_send!`/`sel_impl!` macros expand to a deprecated
# `#[cfg(feature = "cargo-clippy")]`, which trips `unexpected_cfgs` under
# `cargo clippy`. We don't define that feature; declare it expected so the
# noise from the macro expansion in gui.rs is silenced at source.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }
