[package]
name = "vxn-core-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Shared MVC controller for VXN synth plugins (ParamModel, events, Controller, EditorBackend, PresetStore)."

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
