[package]
name = "vxn-core-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Shared MVC controller for VXN synth plugins (ParamModel, events, Controller, EditorBackend, PresetStore)."

[dependencies]
serde = { version = "1", features = ["derive"] }
# Corpus → JS-browser JSON projection ([`preset::corpus_snapshot_json`]). Lives
# here (model layer), not in the desktop `vxn-core-ui-web`, so the wasm web
# controller (deps only `vxn-app`, ADR 0009 — never wry) builds the same payload
# native does.
serde_json = "1"

[dev-dependencies]
serde_json = "1"
