[package]
name = "vxn-core-clap"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Shared CLAP plugin scaffold (clack) for VXN synth plugins (3-thread shape, event dispatch, state I/O)."

[dependencies]

[dev-dependencies]
