[package]
name = "vxn-core-clap"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Shared clack scaffold helpers for VXN synth plugins (event dispatch, LocalParams, state I/O, gesture emit, transport)."

[dependencies]
vxn-core-app = { workspace = true }
clack-plugin = { workspace = true }
clack-extensions = { workspace = true, features = [
    "audio-ports",
    "note-ports",
    "params",
    "state",
    "clack-plugin",
] }

[dev-dependencies]
clack-host = { workspace = true }
clack-extensions = { workspace = true, features = ["params", "state", "clack-host"] }
