[package]
name = "vxn-core-ui-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Shared wry WebView editor shell + JS-Rust IPC bridge + native text-input popup for VXN synth plugins."

[dependencies]
vxn-core-app = { workspace = true }

# wry 0.45 matches the vxn-1 prototype that got the editor up against the
# controller end-to-end. The bridge surface (with_ipc_handler,
# evaluate_script, new_as_child) is stable in this rev.
wry = "0.45"

# wry 0.45 takes a parent that implements `HasWindowHandle` from
# raw-window-handle 0.6.
raw-window-handle = "0.6"

# IPC payloads are JSON; the bridge stays small enough that hand-rolled
# matching beats pulling serde derives down.
serde_json = "1"

# Floating NSWindow text-input popup: pinned objc 0.2.
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

# Floating Win32 popup: WS_POPUP owner-anchored to the host HWND so
# VK_RETURN / VK_ESCAPE bypass the host's transport key swallow.
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
] }

[lints.rust]
# The `objc` 0.2 `msg_send!`/`sel_impl!` macros expand to a deprecated
# `#[cfg(feature = "cargo-clippy")]`, which trips `unexpected_cfgs` under
# `cargo clippy`. Mirror vxn-clap's suppression.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }
