[package]
name = "vxn-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "VXN1 synth engine: parameters, voice allocation, and block rendering."

[dependencies]
vxn-dsp = { workspace = true }
# Preset format (E007 / ADR 0005): main-thread only — the audio path never
# touches serde/toml. `include_dir` embeds the factory bank in the binary.
serde = { version = "1", features = ["derive"] }
toml = "0.8"
include_dir = "0.7"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "render"
harness = false
