[package]
name = "vxn-preset"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Shared sparse-TOML preset-codec scaffold (Meta, PresetError, Header, SCHEMA, value_for) for VXN synth engines."

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
