[package]
name = "vxn-ui-vizia"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[features]
# Compiles the standalone layout-probe tool (the `Probe` view + `run_layout_probe`
# + `examples/layout_probe.rs`). Off by default so none of it reaches the plugin.
# See the doc on `Probe` for usage.
layout-probe = []

[dependencies]
# After ADR 0007 the editor depends only on vxn-app — descriptors, param ids,
# preset corpus snapshot, and controller-event types. Engine internals stay
# behind the `ParamModel` trait and the `PresetStore` impl in `vxn-engine`.
vxn-app.workspace = true

# Vizia editor, embedded into the host window via baseview. Pinned to a known
# rev whose baseview speaks raw-window-handle 0.5 (matches clack's
# `raw-window-handle_05` gui feature). See vxn1-ui-deps notes.
vizia = { git = "https://github.com/vizia/vizia", rev = "1b1d1b6b30cf383bdb06e87611088026945f10c2", default-features = false, features = ["baseview"] }
raw-window-handle = "0.5"
