[package]
name = "vxn-ui-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "VXN1 web editor backend: faceplate HTML assembly + VXN1 custom opcode/view hooks over the shared vxn-core-ui-web WebView editor."

[dependencies]
vxn-app.workspace = true
vxn-core-ui-web = { workspace = true }

# The WebView lifecycle (wry) and the parent-window adapter (raw-window-
# handle) live in `vxn-core-ui-web` post-E024/0077; this crate only builds a
# `WebEditorConfig` and never touches either directly.

# IPC payloads are JSON; the bridge stays small enough that hand-rolled
# matching beats pulling serde derives down into vxn-app.
serde_json = "1"

# Floating text-input popup lives in `vxn-core-ui-web::text_input` post-0009.
# No per-platform popup deps here.
