# Throwaway WASM spike (ticket 0034). Raw C-ABI cdylib — no wasm-bindgen —
# so the module instantiates cleanly inside an AudioWorklet scope.
[package]
name = "vxn-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "VXN1 WASM/browser feasibility spike: Synth::process exposed over a C ABI."

[lib]
crate-type = ["cdylib"]

[dependencies]
vxn-engine = { workspace = true }
# 0037: single source of truth for the 165-id CLAP param layout + KeyMode.
# Proven wasm-clean by the 0036 probe (ADR 0009). Used for id-layout constants,
# patch/global_clap_id, KeyMode, and norm->plain conversion in the decoder.
vxn-app = { workspace = true }
