[package]
name = "vxn2-clap"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "VXN2 CLAP plugin shell (clack)."

[lib]
# cdylib for the host-loadable plugin; rlib so integration tests (0020) can
# link the plugin in-process without dlopen and get real panic backtraces.
crate-type = ["cdylib", "rlib"]

[dependencies]
vxn2-engine = { workspace = true }
clack-plugin = { workspace = true }
clack-extensions = { workspace = true, features = [
    "audio-ports",
    "note-ports",
    "params",
    "state",
    "clack-plugin",
] }

[dev-dependencies]
clack-host = { workspace = true }
# The integration smoke test (0020) drives the plugin via clack-host and
# reaches into the host side of `params` + `state`. Re-declare the
# extensions crate here with `clack-host` so those host-side methods (e.g.
# `PluginState::save`/`load`, `PluginParams::get_value`) compile.
clack-extensions = { workspace = true, features = [
    "params",
    "state",
    "clack-host",
] }
